--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://sinica.lat.github.io/cabrona_music",
+  "homepage": "https://sinica.lat.github.io",
   "name": "cabrona_music",
   "version": "0.1.0",
   "private": true,
